--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-awesome-slider": "^4.1.0",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
