--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,3 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "prettier"
-  ],
-  "plugins": [
-    "react",
-    "prettier"
-  ]
+  "extends": "next/core-web-vitals"
 }
