--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@tailwindcss/forms": "^0.3.3",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-awesome-slider": "^4.1.0",
+    "react-colorful": "^5.4.0",
+    "react-dom": "17.0.2",
     "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
